Issues with parsing orderDto --> going to work on separate branch

--- a/jar/pom.xml
+++ b/jar/pom.xml
@@ -12,4 +12,11 @@
 
     <artifactId>jar</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.mygroupid</groupId>
+            <artifactId>api</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
